--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   url_launcher: ^6.0.20
   carousel_slider: ^4.0.0
   video_player: ^2.1.6
+  supabase_flutter: ^2.0.0
+  shared_preferences: ^2.0.11
+
 
 
   # The following adds the Cupertino Icons font to your application.
